k8s/proxy/network-policy.yaml
# this will block all network egress except to the proxy

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: env0-agent-kushield # change this for the namespace you are working on - only requests to the proxy will be allowed
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to: # kube-dns
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53

    - to: # proxy
        - podSelector:
            matchLabels:
              app: squid
          namespaceSelector:
            matchLabels:
              app: squid
      ports:
        - protocol: TCP
          port: 3128
